--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -42,6 +42,8 @@
   letter-spacing: 1.8px;
   text-align: center;
   text-transform: uppercase;
+  text-decoration: none ;
+
   transition: all 33ms cubic-bezier(.3,0,0,1);
     white-space: nowrap;
     will-change: transform;
